# smpclient

./: .coveragerc  .flake8  .gitignore  .mcp.json  LICENSE  README.md  envr-default  envr.ps1  mkdocs.yaml  pyproject.toml  tasks.py  versions.json
.githooks/: pre-commit
.github/workflows/: lint.yaml  release.yaml  test-docs.yaml  test.yaml
4.3.0/: 404.html  index.html  objects.inv
4.3.0/file_management/: index.html
4.3.0/image_management/: index.html
4.3.0/os_management/: index.html
4.3.0/requests/: index.html
4.3.0/search/: search_index.json
4.3.0/settings_management/: index.html
4.3.0/shell_management/: index.html
4.3.0/statistics_management/: index.html
4.3.0/transport/ble/: index.html
4.3.0/transport/serial/: index.html
4.3.0/transport/transport/: index.html
4.3.0/transport/udp/: index.html
4.3.0/user/intercreate/: index.html
4.3.0/zephyr_management/: index.html
4.4.0/: 404.html  index.html  objects.inv
4.4.0/file_management/: index.html
4.4.0/image_management/: index.html
4.4.0/mcuboot/: index.html
4.4.0/os_management/: index.html
4.4.0/requests/: index.html
4.4.0/search/: search_index.json
4.4.0/settings_management/: index.html
4.4.0/shell_management/: index.html
4.4.0/statistics_management/: index.html
4.4.0/transport/ble/: index.html
4.4.0/transport/serial/: index.html
4.4.0/transport/transport/: index.html
4.4.0/transport/udp/: index.html
4.4.0/user/intercreate/: index.html
4.4.0/zephyr_management/: index.html
5.0.0/: 404.html  _generate_requests_docstrings.py  index.html  objects.inv
5.0.0/file_management/: index.html
5.0.0/image_management/: index.html
5.0.0/mcuboot/: index.html
5.0.0/os_management/: index.html
5.0.0/requests/: index.html
5.0.0/search/: search_index.json
5.0.0/settings_management/: index.html
5.0.0/shell_management/: index.html
5.0.0/statistics_management/: index.html
5.0.0/stylesheets/: extra.css
5.0.0/transport/ble/: index.html
5.0.0/transport/serial/: index.html
5.0.0/transport/transport/: index.html
5.0.0/transport/udp/: index.html
5.0.0/user/intercreate/: index.html
5.0.0/zephyr_management/: index.html
7.0.0/: objects.inv
7.0.0/requests/: index.html
7.0.0/search/: search_index.json
7.0.0/settings_management/: index.html
7.0.0/shell_management/: index.html
7.0.0/transport/ble/: index.html
7.0.0/transport/transport/: index.html
7.0.0/transport/udp/: index.html
7.0.0/user/intercreate/: index.html
7.0.0/zephyr_management/: index.html
7.0.1/: index.html
7.0.1/file_management/: index.html
7.0.1/image_management/: index.html
7.0.1/search/: search_index.json
7.0.1/stylesheets/: extra.css
7.0.1/transport/ble/: index.html
7.0.1/transport/serial/: index.html
7.1.0/: _generate_requests_docstrings.py  objects.inv
7.1.0/mcuboot/: index.html
7.1.0/search/: search_index.json
7.1.0/statistics_management/: index.html
7.1.0/transport/ble/: index.html
7.2.0/: 404.html  objects.inv
7.2.0/mcuboot/: index.html
7.2.0/os_management/: index.html
7.2.0/search/: search_index.json
7.2.0/transport/transport/: index.html
docs/: _generate_requests_docstrings.py  file_management.md  image_management.md  index.md  mcuboot.md  os_management.md  requests.md  settings_management.md  shell_management.md  statistics_management.md  zephyr_management.md
docs/transport/: ble.md  bumble.md  serial.md  transport.md  udp.md
docs/user/: intercreate.md
dutfirmware/: .gitignore  README.md  ble_a_smp_dut.conf  ble_b_smp_dut.conf  envr-default  envr.ps1  image_check.conf  mcuboot_serial.conf  mcuboot_usb.conf  mcuboot_usb.overlay  stm32f4_disco_flash_overlay.dts  stm32f4_disco_serial_overlay.dts  stm32f4_disco_serial_recovery_button_overlay.dts  udp_a_smp_dut.conf  udp_b_smp_dut.conf  usb_a_smp_dut.conf  usb_b_smp_dut.conf  usb_smp_dut.conf  usb_smp_dut_1024_1_1024.conf  usb_smp_dut_512_8_4096.conf  usb_smp_dut_8192_1_8192.conf
examples/: README.md
examples/ble/: README.md  helloworld.py  imagestate.py  mcumgrparameters.py  upgrade.py  upload.py
examples/duts/mimxrt1060_evkb/usb/: mcuboot.hex  (+1 more)
examples/udp/: helloworld.py
examples/usb/: download_file.py  helloworld.py  smpclienteval.py  upgrade.py  upload_file.py
smpclient/: __init__.py  _asyncio_timeout.py  _timeouts.py  exceptions.py  generics.py  mcuboot.py
smpclient/extensions/: intercreate.py
smpclient/requests/: file_management.py  image_management.py  os_management.py  shell_management.py  statistics_management.py  zephyr_management.py
smpclient/requests/user/: intercreate.py
smpclient/transport/: __init__.py  _udp_client.py  ble.py  serial.py  udp.py
src/smpclient/: __init__.py  exceptions.py  mcuboot.py
src/smpclient/extensions/: intercreate.py
src/smpclient/requests/: enumeration_management.py  settings_management.py
src/smpclient/transport/: __init__.py  _udp_client.py  ble.py  serial.py
tests/: test_base64.py  test_cobs.py  test_hci_firmware.py  test_mcuboot_tools.py  test_requests.py  test_smp_ble_transport.py  test_smp_bumble_firmware.py  test_smp_bumble_transport.py  test_smp_client.py  test_smp_serial_raw_transport.py  test_smp_serial_transport.py  test_smp_udp_transport.py  test_udp_client.py
tests/extensions/: test_intercreate.py
tests/fixtures/: analyze-mcuboot-img.py
tests/fixtures/file_system/: 255_bytes.txt  test.txt
tests/fixtures/smp-server/: SHA256SUMS  VERSION  manifest.json  zephyr_4.4.0_smp_server_0eae053d_mps2_an385_serial_recovery.hex  zephyr_4.4.0_smp_server_0eae053d_qemu_cortex_m0_serial.merged.hex  zephyr_4.4.0_smp_server_0eae053d_qemu_cortex_m0_serial_buf256.hex  zephyr_4.4.0_smp_server_0eae053d_qemu_cortex_m0_serial_buf512.hex  zephyr_4.4.0_smp_server_2ad0d6bf_qemu_cortex_m0_serial.merged.hex  zephyr_4.4.0_smp_server_2ad0d6bf_qemu_cortex_m0_serial_buf256.hex  (+5 more)
tests/integration/: __init__.py  conftest.py  servers.py  test_enumeration.py  test_file_management.py  test_fragmentation.py  test_image_management.py  test_os_management.py  test_serial_raw.py  test_serial_recovery.py  test_serial_recovery_raw.py  test_udp.py
(+26 files in other folders)
